// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/select/Select should not show Tooltip when no error exists 1`] = `
<div
  className="bdl-Select-inputContainer"
>
  <Label
    hideLabel={false}
    text="label"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      position="middle-right"
      text=""
      theme="error"
    >
      <span
        className="bdl-Select-container"
      >
        <span
          className="bdl-Select-container-inner"
        >
          <select />
          <span
            className="bdl-Select-overlay"
          />
        </span>
      </span>
    </Tooltip>
  </Label>
</div>
`;

exports[`components/select/Select should not show error outline if not specified 1`] = `
<div
  className="bdl-Select-inputContainer"
>
  <Label
    hideLabel={false}
    text="label"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      position="middle-right"
      text=""
      theme="error"
    >
      <span
        className="bdl-Select-container"
      >
        <span
          className="bdl-Select-container-inner"
        >
          <select />
          <span
            className="bdl-Select-overlay"
          />
        </span>
      </span>
    </Tooltip>
  </Label>
</div>
`;

exports[`components/select/Select should render infoTooltip when specified 1`] = `
<div
  className="bdl-Select-inputContainer"
>
  <Label
    hideLabel={false}
    text="Album"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      position="middle-right"
      text=""
      theme="error"
    >
      <span
        className="bdl-Select-container"
      >
        <span
          className="bdl-Select-container-inner"
        >
          <select
            name="select"
          />
          <span
            className="bdl-Select-overlay"
          />
        </span>
        <Tooltip
          constrainToScrollParent={false}
          constrainToWindow={true}
          isDisabled={false}
          position="middle-right"
          text="hello!!!"
          theme="default"
        >
          <span
            className="bdl-Tooltip-iconContainer"
          >
            <IconInfo
              height={16}
              title="hello"
              width={16}
            />
          </span>
        </Tooltip>
      </span>
    </Tooltip>
  </Label>
</div>
`;

exports[`components/select/Select should show Tooltip when error exists 1`] = `
<div
  className="bdl-Select-inputContainer bdl-show-error"
>
  <Label
    hideLabel={false}
    text="label"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={true}
      position="middle-right"
      text="error"
      theme="error"
    >
      <span
        className="bdl-Select-container"
      >
        <span
          className="bdl-Select-container-inner"
        >
          <select />
          <span
            className="bdl-Select-overlay"
          />
        </span>
      </span>
    </Tooltip>
  </Label>
</div>
`;

exports[`components/select/Select should show error outline if specified 1`] = `
<div
  className="bdl-Select-inputContainer bdl-show-error"
>
  <Label
    hideLabel={false}
    text="label"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      position="middle-right"
      text=""
      theme="error"
    >
      <span
        className="bdl-Select-container"
      >
        <span
          className="bdl-Select-container-inner"
        >
          <select />
          <span
            className="bdl-Select-overlay"
          />
        </span>
      </span>
    </Tooltip>
  </Label>
</div>
`;
